<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tVPlayerTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_select_player"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bttnNewPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_new" />

        <Button
            android:id="@+id/bttnLoadProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bttn_load" />
    </LinearLayout>
</LinearLayout>