<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context=".ui.fragments.multyplayer.create.MultiplayerCreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tVTopicCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_profile"
                android:textSize="24sp" />

            <include
                android:id="@+id/includedMultiProfile"
                layout="@layout/layout_profile_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/boardMult1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/board" />

            <TextView
                android:id="@+id/teVConnectTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_connect_topic"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edTConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Ip"
                    android:inputType="text"
                    android:text="Name" />

                <Button
                    android:id="@+id/bttnConnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Ip"
                    android:text="@string/bttn_connect" />
            </LinearLayout>

            <View
                android:id="@+id/boardMult2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/board" />

            <TextView
                android:id="@+id/tVPlayerSettingTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_players"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVPlayerCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/tv_players" />

                <Button
                    android:id="@+id/bttnPlusPlayerMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:minWidth="5dp"
                    android:text="+" />

                <TextView
                    android:id="@+id/tVPlayerCountMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="1" />

                <Button
                    android:id="@+id/bttnMinusPlayerMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:minWidth="5dp"
                    android:text="-" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVImpostersMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/tv_imposters" />

                <Button
                    android:id="@+id/bttnPlusImposterMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:minWidth="5dp"
                    android:text="+" />

                <TextView
                    android:id="@+id/tVImposterCountMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="1" />

                <Button
                    android:id="@+id/bttnMinusImposterMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="5dp"
                    android:text="-" />
            </LinearLayout>

            <View
                android:id="@+id/boardMult3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/board" />

            <TextView
                android:id="@+id/tVPacksTopicMult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_pack_setting"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/swAutorMult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sw_autor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVPackMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tv_pack" />

                <TextView
                    android:id="@+id/tVPackShowerMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <Switch
                android:id="@+id/swRandomPackMult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sw_random_pack" />

            <View
                android:id="@+id/boardMult4"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/board" />

            <TextView
                android:id="@+id/tVOtherSettingMult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_other_options"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVInkMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_ink" />

                <Button
                    android:id="@+id/bttnPlusInkMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="5dp"
                    android:text="+" />

                <TextView
                    android:id="@+id/tVInkCountMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <Button
                    android:id="@+id/bttnMinusInkMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="5dp"
                    android:text="-" />
            </LinearLayout>

            <Switch
                android:id="@+id/swTimerMult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sw_timer" />

            <LinearLayout
                android:id="@+id/lLTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVTimerMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_timer" />

                <Button
                    android:id="@+id/bttnPlusTimerMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="5dp"
                    android:text="+" />

                <TextView
                    android:id="@+id/tVTimeCountMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <Button
                    android:id="@+id/bttnMinusTimerMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="5dp"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bttnCreateLobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bttn_create_lobby" />
</LinearLayout>